# data-base-workshop-course

./: .env  .gitignore  README.md  main.py  manual.tex  pyproject.toml
app/: database.py  main.py  models.py  repository.py
app/routers/: analytics.py  movies.py  search.py
client/: .gitignore  package-lock.json  package.json
client/src/: index.html  styles.css
client/src/app/: app.css  app.html  app.routes.ts  app.ts
client/src/app/components/analytics/: analytics.css  analytics.html  analytics.ts
client/src/app/components/home/: home.css  home.html  home.ts
client/src/app/components/movie-detail/: movie-detail.css  movie-detail.html  movie-detail.ts
client/src/app/services/: movie.ts
dal/: __init__.py  connect_to_db.py  load_data.py  load_movies.py
db/: __init__.py  apply_schema_update.py  check_cast.py  check_ratings.py  connect_to_db.py  create_db.py  create_educational_list.py  fetch_movies_ids.py  generate_schema.py  init_db_from_dump.py  inspect_data.py  load_data.py  load_movielens.py  load_schema.py  load_the_movies_dataset.py  migrate_ratings.py  new_schema.sql  schema.sql  test_db_connection.py  test_query.py  utils.py  verify_posters.py
documents-for-submit/: manual.tex  our-idea.pptx  project-idea-copy.docx  project-idea.docx  מדריך למשתמש.docx
software_manual/backend/: backend_mannual.aux  backend_mannual.fdb_latexmk  backend_mannual.fls  backend_mannual.out  backend_mannual.tex  backend_mannual.toc
software_manual/client/: client_manual.aux  client_manual.fdb_latexmk  client_manual.fls  client_manual.out  client_manual.tex  client_manual.toc
software_manual/complete/: complete_manual.aux  complete_manual.fdb_latexmk  complete_manual.fls  complete_manual.out  complete_manual.tex  complete_manual.toc
software_manual/db/: db_manual.aux  db_manual.fdb_latexmk  db_manual.fls  db_manual.out  db_manual.tex  db_manual.toc
software_manual/ui/: ui_design.aux  ui_design.fdb_latexmk  ui_design.fls  ui_design.tex
