[project]
name = "data-base-workshop-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "kagglehub>=0.3.13",
    "mysql-connector-python>=9.4.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
]
